--- a/landingPage.html
+++ b/landingPage.html
@@ -66,6 +66,7 @@
             src="/images/vv7pne1n0wp11_octq8r.jpg"
             class="d-block w-100 img-fluid"
             alt="..."
+            
           />
         </div>
       </div>
@@ -88,44 +89,56 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="service p-5" id="service">
-        <div class="container">
-          <div class="grid">
-            <div class="row">
-              <div class="col-md-4 text-center">
-                <i class="fa-solid fa-glass-water fa-3x text-black my-2"></i>
-                <p class="h2 dance fw-bold">Smooth Taste</p>
-                <p class="lead fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio,
-                  blanditiis repellat eveniet possimus laborum optio molestias
-                  ullam aliquam reiciendis vel, veritatis quis deleniti magnam a
-                  quas iste obcaecati quos adipisci.
-                </p>
-              </div>
-              <div class="col-md-4 text-center">
-                <i class="fa-solid fa-house fa-3x text-black my-2"></i>
-                <p class="h2 dance fw-bold">Made in Ireland</p>
-                <p class="lead fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio,
-                  blanditiis repellat eveniet possimus laborum optio molestias
-                  ullam aliquam reiciendis vel, veritatis quis deleniti magnam a
-                  quas iste obcaecati quos adipisci.
-                </p>
-              </div>
-              <div class="col-md-4 text-center">
-                <i class="fa-solid fa-flag-checkered fa-3x text-danger my-2"></i>
-                <p class="h2 dance fw-bold">Rich History</p>
-                <p class="lead fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio,
-                  blanditiis repellat eveniet possimus laborum optio molestias
-                  ullam aliquam reiciendis vel, veritatis quis deleniti magnam a
-                  quas iste obcaecati quos adipisci.
-                </p>
-              </div>
+
+
+    <section class="offers" id="offers">
+        <div class="menu-1 bg-dark p-5">
+            <div class="container">
+                <div class="grid">
+                    <div class="row align-items-center">
+                        <div class="col-md-6 dance text-white fw-bold">
+                            <p class="h2">Made In Ireland</p>
+                            <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
+                        </div>
+                        <div class="col-md-6 align-items-center">
+                            <img src="/images/flag-of-ireland-irish-flag-blowing-in-the-wind-part-of-a-series-241-2c1b.jpg" class="img-fluid" width="400px" height="200px">
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
+        <div class="menu-2 bg-white p-5">
+            <div class="container">
+                <div class="grid">
+                    <div class="row align-items-center">
+                        <div class="col-md-6 align-items-center">
+                            <img src="/images/2814503439_846e1d1697_o_wide-22d2c9d528eb7df9d655fdf1f498bf1779a696d4.jpg" class="img-fluid" width="500px" height="500px">
+                        </div>
+                        <div class="col-md-6 dance  fw-bold">
+                            <p class="h2">Smooth Taste</p>
+                            <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="menu-1 bg-dark p-5">
+            <div class="container">
+                <div class="grid">
+                    <div class="row align-items-center">
+                        <div class="col-md-6 dance text-white fw-bold">
+                            <p class="h2">Rich History</p>
+                            <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
+                        </div>
+                        <div class="col-md-6 align-items-center">
+                            <img src="/images/2017_0-28efe4ba.webp" class="img-fluid" width="400px" height="200px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
 </section>
 
 
