--- a/landingPage.html
+++ b/landingPage.html
@@ -107,14 +107,14 @@
                 </div>
             </div>
         </div>
-        <div class="menu-2 bg-white p-5">
+        <div class="menu-2 bg-dark p-5">
             <div class="container">
                 <div class="grid">
                     <div class="row align-items-center">
                         <div class="col-md-6 align-items-center">
                             <img src="/images/2814503439_846e1d1697_o_wide-22d2c9d528eb7df9d655fdf1f498bf1779a696d4.jpg" class="img-fluid" width="500px" height="500px">
                         </div>
-                        <div class="col-md-6 dance  fw-bold">
+                        <div class="col-md-6 dance text-white fw-bold">
                             <p class="h2">Smooth Taste</p>
                             <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
                         </div>
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </div>
-        <div class="menu-1 bg-dark p-5">
+        <div class="menu-1 bg-black p-5">
             <div class="container">
                 <div class="grid">
                     <div class="row align-items-center">
@@ -132,7 +132,7 @@
                             <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
                         </div>
                         <div class="col-md-6 align-items-center">
-                            <img src="/images/2017_0-28efe4ba.webp" class="img-fluid" width="400px" height="200px">
+                            <img src="/images/2017_0-28efe4ba.webp" class="img-fluid" width="600px" height="200px">
                         </div>
                     </div>
                 </div>
