more info to nutri page

--- a/nutritional.html
+++ b/nutritional.html
@@ -37,14 +37,26 @@
               <tr>
                 <th scope="row">2</th>
                 <td>Carbs</td>
-                <td>Thornton</td>
-                <td>@fat</td>
+                <td>half of a pint</td>
+                <td>just drink it, basically zero</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>of which</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <td>of which are sugar</td>
+                <td>less than a choclate bar</td>
+                <td>are you really counting at this point?</td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>Fat</td>
+                <td>You need to bulk up</td>
+                <td>Good for fitness</td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>Beef</td>
+                <td>not enough beef</td>
+                <td>get a beef eater with it</td>
               </tr>
             </tbody>
           </table>
