--- a/nutritional.html
+++ b/nutritional.html
@@ -18,13 +18,14 @@
 <body>
 
     <section>
-        <table class="table table-striped">
+        <table class="table table-striped table-dark">
             <thead>
-              <tr>
+              <tr >
                 <th scope="col">#</th>
-                <th scope="col">Ingredients(do you care?)</th>
+                <th scope="col" >Ingredients(do you care?)</th>
                 <th scope="col">Per half pint (why?)</th>
                 <th scope="col">Full Pint (There you go!)</th>
+                <th scope="col">SPLIT</th>
               </tr>
             </thead>
             <tbody>
@@ -33,33 +34,72 @@
                 <td>Protein</td>
                 <td>not enough</td>
                 <td>have another pint to be sure</td>
+                <td>THE</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td>Carbs</td>
+                <td >Carbs</td>
                 <td>half of a pint</td>
                 <td>just drink it, basically zero</td>
+                <td>G</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
                 <td>of which are sugar</td>
                 <td>less than a choclate bar</td>
                 <td>are you really counting at this point?</td>
+                <td>ON</td>
               </tr>
               <tr>
                 <th scope="row">4</th>
                 <td>Fat</td>
                 <td>You need to bulk up</td>
                 <td>Good for fitness</td>
+                <td>EVERY</td>
               </tr>
               <tr>
                 <th scope="row">5</th>
                 <td>Beef</td>
-                <td>not enough beef</td>
-                <td>get a beef eater with it</td>
+                <td><a href="https://www.beefeater.co.uk/en-gb" class="beefeaterTag">not enough beef</a></td>
+                <td><a href="https://www.beefeater.co.uk/en-gb" class="beefeaterTag">get a beef eater with it</a></td>
+                <td>PINT</td>
               </tr>
             </tbody>
           </table>
+
+          <section class="offers" id="offers">
+            <div class="menu-1 bg-dark p-5">
+                <div class="container">
+                    <div class="grid">
+                        <div class="row align-items-center">
+                            <div class="col-md-6 dance text-white fw-bold">
+                                <p class="h2">Made with Purpose</p>
+                                <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
+                            </div>
+                            <div class="col-md-6 align-items-center">
+                                <img src="/images/tiredgun.jpg" class="img-fluid" width="400px" height="200px">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="menu-2 bg-dark p-5">
+                <div class="container">
+                    <div class="grid">
+                        <div class="row align-items-center">
+                            <div class="col-md-6 align-items-center">
+                                <img src="/images/stregnth-g.jpg" class="img-fluid" width="500px" height="500px">
+                            </div>
+                            <div class="col-md-6 dance text-white fw-bold">
+                                <p class="h2">Guinness for Strength</p>
+                                <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
     </section>
     
 </body>
