--- a/nutritional.html
+++ b/nutritional.html
@@ -17,6 +17,19 @@
 </head>
 <body>
 
+    <section class="nutribackground">
+
+    <div class="container">
+        <div class="gird">
+            <div class="row">
+                <div class="div col align-items-center">
+                    <img src="/images/2814503439_846e1d1697_o_wide-22d2c9d528eb7df9d655fdf1f498bf1779a696d4.jpg" class="img-fluid" alt="Responsive image">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
     <section>
         <table class="table table-striped table-dark">
             <thead>
