--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
               <a class="nav-link scale" href="#">Store</a>
             </li>
             <li class="nav-item scale">
-              <a class="nav-link" href="#">Visit</a>
+              <a class="nav-link" href="visit.html">Visit</a>
             </li>
             <li class="nav-item scale">
-              <a class="nav-link" href="#">Nutrition</a>
+              <a class="nav-link" href="nutritional.html">Nutrition</a>
             </li>
             <li class="nav-item scale">
-              <a class="nav-link" href="#">History</a>
+              <a class="nav-link" href="history.html">History</a>
             </li>
           </ul>
         </div>
