--- a/nutritional.html
+++ b/nutritional.html
@@ -138,6 +138,29 @@
             </div>
           </section>
     </section>
-    
+    <footer class="bg-dark text-light">
+      <div class="container">
+          <div class="grid">
+              <div class="row">
+                  <div class="col-3">
+                      <ul class="footer-list p-3">
+                          <li  class="p-2 mb-1"><a href="">Link</a></li>
+                          <li  class="p-2 mb-1"><a href="">Link</a></li>
+                          <li  class="p-2 mb-1"><a href="">Link</a></li>
+                          <li  class="p-2 mb-1"><a href="">Link</a></li>
+                          <li  class="p-2 mb-1"><a href="">Link</a></li>
+                      </ul>
+                  </div>
+                  <div class="col-3 justify-self-end p-3 d-flex flex-column ms-auto align-items-center">
+                      <a href="https://www.drinkaware.co.uk/?gclid=EAIaIQobChMI1I-gnt3IggMV0otoCR3AiwX_EAAYASAAEgKdvfD_BwE" class="footer-link mb-1 p-2">Drink Aware</a>
+                      <i class="fab fa-facebook text-light fa-2x mb-1 p-1"></i>
+                      <i class="fab fa-twitter text-light fa-2x mb-1 p-1"></i>
+                      <i class="fab fa-youtube text-light fa-2x mb-1 p-1"></i>
+                      <i class="fab fa-instagram text-light fa-2x mb-1 p-1"></i>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </footer>
 </body>
 </html>
