--- a/history.html
+++ b/history.html
@@ -47,7 +47,7 @@
             <div class="gird">
                 <div class="row">
                     <div class="div col align-items-center">
-                        <img src="/images/2814503439_846e1d1697_o_wide-22d2c9d528eb7df9d655fdf1f498bf1779a696d4.jpg" class=" historyimg img-fluid" alt="Responsive image">
+                        <img src="/images/store-dublin.jpg" class=" historyimg img-fluid" alt="Responsive image">
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                             <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
                         </div>
                         <div class="col-md-6 align-items-center">
-                            <img src="/i" class="img-fluid" width="400px" height="200px">
+                            <img src="/images/history-gunwa.jpg" class="img-fluid" width="400px" height="200px">
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                 <div class="grid">
                     <div class="row align-items-center">
                         <div class="col-md-6 align-items-center">
-                            <img src="/images/stregnth-g.jpg" class="img-fluid" width="500px" height="500px">
+                            <img src="/images/guiness_by_schumix.jpg" class="img-fluid" width="500px" height="500px">
                         </div>
                         <div class="col-md-6 dance text-white fw-bold">
                             <p class="h2">Pint of the black stuff please</p>
