fixed nav links to center of screen on xxl layouts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm text-dark head-color fw-bold">
+      <div class="container-xxl">
         <a class="navbar-brand" href="/index.html">
             <img src="images/harp.png"  class="img-fluid px-2 scale" alt="logo" width="50px">
         </a>
@@ -35,6 +36,7 @@
             </li>
           </ul>
         </div>
+      </div>
       </nav>
       <!-- CAROUSEL -->
 
