--- a/history.html
+++ b/history.html
@@ -49,7 +49,7 @@
             <div class="gird">
                 <div class="row">
                     <div class="div col align-items-center">
-                        <img src="/images/store-dublin.jpg" class=" historyimg img-fluid" alt="Responsive image">
+                        <img src="/images/store-dublin.jpg" class=" historyimg img-fluid rounded" alt="Responsive image">
                     </div>
                 </div>
             </div>
@@ -62,11 +62,11 @@
                 <div class="grid">
                     <div class="row align-items-center">
                         <div class="col-md-6 dance text-white fw-bold">
-                            <p class="h2">Around since 1660</p>
+                            <p class="h2">Around since 1759</p>
                             <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
                         </div>
                         <div class="col-md-6 align-items-center">
-                            <img src="/images/history-gunwa.jpg" class="img-fluid" width="400px" height="200px">
+                            <img src="/images/history-gunwa.jpg" class="img-fluid rounded" width="400px" height="200px">
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 <div class="grid">
                     <div class="row align-items-center">
                         <div class="col-md-6 align-items-center">
-                            <img src="/images/guiness_by_schumix.jpg" class="img-fluid" width="500px" height="500px">
+                            <img src="/images/guiness_by_schumix.jpg" class="img-fluid rounded" width="500px" height="500px">
                         </div>
                         <div class="col-md-6 dance text-white fw-bold">
                             <p class="h2">Pint of the black stuff please</p>
