--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- CAROUSEL -->
 
       <section>
-        <div class="container img-fluid">
+        <div class="container p-5">
     <div
     id="carouselExampleIndicators"
     class="carousel slide"
@@ -72,23 +72,24 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="/images/vv7pne1n0wp11_octq8r.jpg"
+          src="/new_images/guncar1redo.png"
           class="d-block w-100 img-fluid"
           alt="..."
         />
       </div>
       <div class="carousel-item">
         <img
-          src="/images/110-1100802_pint-of-guinness-pint-of-guinness-png.png"
+          src="/new_images/gun-2-carl.jpg"
           class="d-block w-100 img-fluid"
           alt="..."
         />
       </div>
       <div class="carousel-item">
         <img
-          src="/images/vv7pne1n0wp11_octq8r.jpg"
+          src="/new_images/gun-car-3.png"
           class="d-block w-100 img-fluid"
           alt="..."
+
         />
       </div>
     </div>
@@ -116,7 +117,7 @@
     
     
         <section class="offers" id="offers">
-            <div class="menu-1 bg-dark p-5">
+            <div class="menu-1 bg-dark">
                 <div class="container">
                     <div class="grid">
                         <div class="row align-items-center">
@@ -125,7 +126,7 @@
                                 <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
                             </div>
                             <div class="col-md-6 align-items-center">
-                                <img src="/images/flag-of-ireland-irish-flag-blowing-in-the-wind-part-of-a-series-241-2c1b.jpg" class="img-fluid" width="400px" height="200px">
+                                <img src="/images/flag-of-ireland-irish-flag-blowing-in-the-wind-part-of-a-series-241-2c1b.jpg" alt="" class="img-fluid rounded" width="400px" height="200px">
                             </div>
                         </div>
                     </div>
@@ -136,7 +137,7 @@
                     <div class="grid">
                         <div class="row align-items-center">
                             <div class="col-md-6 align-items-center">
-                                <img src="/images/2814503439_846e1d1697_o_wide-22d2c9d528eb7df9d655fdf1f498bf1779a696d4.jpg" class="img-fluid" width="500px" height="500px">
+                                <img src="/images/2814503439_846e1d1697_o_wide-22d2c9d528eb7df9d655fdf1f498bf1779a696d4.jpg" alt="" class="img-fluid rounded" width="500px" height="500px">
                             </div>
                             <div class="col-md-6 dance text-white fw-bold">
                                 <p class="h2">Smooth Taste</p>
@@ -156,7 +157,7 @@
                                 <p class="lead fst-italic">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nesciunt suscipit saepe illo consectetur aspernatur dignissimos voluptatibus hic culpa, vel quibusdam beatae itaque obcaecati quis. Illum quos voluptatum rerum reprehenderit.</p>
                             </div>
                             <div class="col-md-6 align-items-center">
-                                <img src="/images/2017_0-28efe4ba.webp" class="img-fluid" width="600px" height="200px">
+                                <img src="/images/2017_0-28efe4ba.webp" class="img-fluid rounded" alt="" width="600px" height="200px">
                             </div>
                         </div>
                     </div>
