--- a/nutritional.html
+++ b/nutritional.html
@@ -43,10 +43,10 @@
       </div>
     </div>
     </nav>
-    <section class="nutribackground">
+    <section >
 
-      <section class="nutribackground">
-        <div class="menu-1 bg-dark p-5 ">
+      <section>
+        <div class="menu-1 p-5 ">
         <div class="container">
             <div class="gird">
                 <div class="row">
@@ -60,7 +60,7 @@
 </section>
 
     <section>
-      <div class="container p-5 ">
+      <div class="container p-5  ">
         <table class="table table-striped  table-dark">
             <thead>
               <tr >
@@ -113,7 +113,7 @@
         </section>
 
           <section class="offers" id="offers">
-            <div class="menu-1 bg-dark p-5">
+            <div class="menu-1 p-5">
                 <div class="container">
                     <div class="grid">
                         <div class="row align-items-center">
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-2 bg-dark p-5">
+            <div class="menu-2 p-5">
                 <div class="container">
                     <div class="grid">
                         <div class="row align-items-center">
