graident fixes history page

--- a/history.html
+++ b/history.html
@@ -43,8 +43,8 @@
           </div>
         </div>
         </nav>
-    <section class="nutribackground">
-        <div class="menu-1 bg-dark p-5 ">
+    <section >
+        <div class="menu-1 p-5 ">
         <div class="container">
             <div class="gird">
                 <div class="row">
@@ -57,7 +57,7 @@
     </section>
 
     <section class="offers" id="offers">
-        <div class="menu-1 bg-dark p-5">
+        <div class="menu-1 p-5">
             <div class="container">
                 <div class="grid">
                     <div class="row align-items-center">
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <div class="menu-2 bg-dark p-5">
+        <div class="menu-2 p-5">
             <div class="container">
                 <div class="grid">
                     <div class="row align-items-center">
