--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="/new_images/guncar1redo.png"
+          src="/new_images/gun-car-3.png"
           class="d-block w-100 img-fluid"
           alt="..."
         />
@@ -117,7 +117,7 @@
     
     
         <section class="offers" id="offers">
-            <div class="menu-1 bg-dark">
+            <div class="menu-1">
                 <div class="container">
                     <div class="grid">
                         <div class="row align-items-center">
@@ -132,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-2 bg-dark p-5">
+            <div class="menu-2 p-5">
                 <div class="container">
                     <div class="grid">
                         <div class="row align-items-center">
