--- a/visit.html
+++ b/visit.html
@@ -46,7 +46,7 @@
                         <h1 class="text-light p-5 ms-auto">Visit us today!</h1>
                         <div class="col-6 ms-auto py-5 d-flex flex-column align-items-end">
                             <p class="text-light py-5 mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsum consequatur maxime non voluptatum sequi, nesciunt animi maiores voluptate? Unde saepe officiis magni accusantium ratione libero eligendi? Ut, nam asperiores cupiditate, illum quas nostrum iusto quia dignissimos, distinctio itaque sapiente.</p>
-                            <a href="#bookings" class="bg-success button text-light p-4 col-3">Book Now</a>
+                            <a href="#bookings" class=" bookNowButton bg-success button text-light rounded p-4 col-3">Book Now</a>
                         </div>
                         
                 </div>
@@ -55,11 +55,11 @@
       </div>
       <!-- ATTRACTIONS -->
       <section>
-        <div class="container py-4 bg-dark text-light">
+        <div class="container py-4 text-light">
             <div class="grid">
                 <div class="row align-items-center">
                     <div class="col-6 d-flex justify-content-center">
-                        <img src="images/storehouse-large.jpg" class="img-fluid" alt="" width="70%">
+                        <img src="images/storehouse-large.jpg" class="img-fluid rounded" alt="" width="70%">
                     </div>
                     <div class="col-6">
                         <h2 class="text-end px-4 py-2">MEGA super fun times</h2>
@@ -79,7 +79,7 @@
                         <p class="px-4 text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi impedit eaque minima vitae debitis. Saepe maiores esse quae porro quia. Nesciunt quaerat nam dolores neque blanditiis quia vel velit itaque rem aperiam, reiciendis minima praesentium dolorem quisquam. Cum ex in provident voluptatibus necessitatibus. Odit rem non excepturi veniam maiores ea.</p>
                     </div>
                     <div class="col-6 d-flex justify-content-center">
-                        <img src="images/freshbatch-large.jpg" class="img-fluid" alt="" width="70%">
+                        <img src="images/freshbatch-large.jpg" class="img-fluid rounded" alt="" width="70%">
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
       <!-- BOOK NOW -->
       <section id="bookings">
         <div class="bootstrap-iso">
-            <div class="container bg-dark text-light">
+            <div class="container text-light">
                 <div class="row p-5">
                     <div class="col-md-12 text-center p-2 mb-4">
                         <h3>Book your tour today!</h3>
@@ -135,7 +135,7 @@
             </div>
         </div>      
       </section>
-      <footer class="bg-dark text-light">
+      <footer class=" text-light">
         <div class="container">
             <div class="grid">
                 <div class="row">
