buttons scaling vist webiste

--- a/visit.html
+++ b/visit.html
@@ -46,7 +46,7 @@
                         <h1 class="text-light p-5 ms-auto">Visit us today!</h1>
                         <div class="col-6 ms-auto py-5 d-flex flex-column align-items-end">
                             <p class="text-light py-5 mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsum consequatur maxime non voluptatum sequi, nesciunt animi maiores voluptate? Unde saepe officiis magni accusantium ratione libero eligendi? Ut, nam asperiores cupiditate, illum quas nostrum iusto quia dignissimos, distinctio itaque sapiente.</p>
-                            <a href="#bookings" class=" bookNowButton bg-success button text-light rounded p-4 col-3">Book Now</a>
+                            <a href="#bookings" class=" bookNowButton btn btn-success scale button text-light rounded p-4 col-3">Book Now</a>
                         </div>
                         
                 </div>
