added fixes to confirm button

--- a/visit.html
+++ b/visit.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="col-12">                         
                         <div class="form-group d-flex justify-content-center p-3">
-                            <button class="btn btn-success px-5" name="submit">Confirm Booking</button>
+                            <button class="btn btn-success scale px-5" name="submit">Confirm Booking</button>
                         </div>
                     </div>
                 </form>
