footer link hovers added and links to websites

--- a/nutritional.html
+++ b/nutritional.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="/images/harp-small.png" />
     <title>Nutrional Page</title>
 </head>
 <body>
