--- a/history.html
+++ b/history.html
@@ -13,6 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="/images/harp-small.png" />
     <title>History</title>
 </head>
 <body>
