--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/images/harp-small.png" />
+    <title>Home Page</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm text-dark head-color fw-bold">
@@ -165,7 +166,7 @@
             </div>
           </section>
    
-      <footer class="bg-dark text-light">
+      <footer class=" text-light">
         <div class="container">
             <div class="grid">
                 <div class="row">
@@ -178,12 +179,12 @@
                             <li  class="p-2 mb-1"><a href="">Link</a></li>
                         </ul>
                     </div>
-                    <div class="col-3 justify-self-end p-3 d-flex flex-column ms-auto align-items-center">
+                    <div class=" footerLinks col-3 justify-self-end p-3 d-flex flex-column ms-auto align-items-center">
                         <a href="https://www.drinkaware.co.uk/?gclid=EAIaIQobChMI1I-gnt3IggMV0otoCR3AiwX_EAAYASAAEgKdvfD_BwE" class="footer-link mb-1 p-2">Drink Aware</a>
-                        <i class="fab fa-facebook text-light fa-2x mb-1 p-1"></i>
-                        <i class="fab fa-twitter text-light fa-2x mb-1 p-1"></i>
-                        <i class="fab fa-youtube text-light fa-2x mb-1 p-1"></i>
-                        <i class="fab fa-instagram text-light fa-2x mb-1 p-1"></i>
+                        <a href="https://www.facebook.com/guinness"><i class="fab fa-facebook text-light fa-2x mb-1 p-1"></i></a>
+                        <a href="https://twitter.com/guinnessgb"><i class="fab fa-twitter text-light fa-2x mb-1 p-1"></i></a>
+                        <a href="https://youtu.be/Lc8wTkyTysA"><i class="fab fa-youtube text-light fa-2x mb-1 p-1"></i></a>
+                        <a href="https://www.instagram.com/guinness/"><i class="fab fa-instagram text-light fa-2x mb-1 p-1"></i></a>
                     </div>
                 </div>
             </div>
