--- a/history.html
+++ b/history.html
@@ -21,22 +21,22 @@
           <a class="navbar-brand" href="/index.html">
               <img src="images/harp.png"  class="img-fluid px-2 scale" alt="logo" width="50px">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto px-3">
-              <li class="nav-item scale">
-                <a class="nav-link scale" href="#">Store</a>
+            <ul class="navbar-nav ms-auto text-end">
+              <li class="nav-item ">
+                <a class="nav-link " href="store.html">Store</a>
               </li>
-              <li class="nav-item scale">
+              <li class="nav-item ">
                 <a class="nav-link" href="visit.html">Visit</a>
               </li>
-              <li class="nav-item scale">
+              <li class="nav-item ">
                 <a class="nav-link" href="nutritional.html">Nutrition</a>
               </li>
-              <li class="nav-item scale">
+              <li class="nav-item ">
                 <a class="nav-link" href="history.html">History</a>
               </li>
             </ul>
