added current page indicatior to nav

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Guinness</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm text-dark head-color fw-bold">
       <div class="container-xxl">
         <a class="navbar-brand" href="/index.html">
             <img src="images/harp.png"  class="img-fluid px-2 scale" alt="logo" width="50px">
+            <span>Guinness</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
