--- a/history.html
+++ b/history.html
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="nutritional.html">Nutrition</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="history.html">History</a>
+                <a class="nav-link bg-white rounded" href="history.html">History</a>
               </li>
             </ul>
           </div>
