--- a/nutritional.html
+++ b/nutritional.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="visit.html">Visit</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="nutritional.html">Nutrition</a>
+            <a class="nav-link bg-white rounded" href="nutritional.html">Nutrition</a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="history.html">History</a>
