--- a/visit.html
+++ b/visit.html
@@ -25,8 +25,8 @@
               <li class="nav-item ">
                 <a class="nav-link " href="store.html">Store</a>
               </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="visit.html">Visit</a>
+              <li class="nav-item rounded">
+                <a class="nav-link bg-white rounded" href="visit.html">Visit</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link" href="nutritional.html">Nutrition</a>
