--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                 <div class="row">
                     <div class="col-3">
                         <ul class="footer-list p-3">
-                            <li  class="p-2 mb-1"><a href="">Link</a></li>
-                            <li  class="p-2 mb-1"><a href="">Link</a></li>
+                            <li  class=" splitG p-2 mb-1"><a href="https://www.ladbible.com/news/guinness-challenge-pub-right-way-20221025">Split the G, but which way?</a></li>
+                            <li  class="beefLink p-2 mb-1"> <a href="">This christmas, Santa goes to the beefeater</a></li>
                            
                         </ul>
                     </div>
