--- a/store.html
+++ b/store.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto text-end">
               <li class="nav-item ">
-                <a class="nav-link bg-white rounded" href="store.html">Store</a>
+                <a class="nav-link bg-white rounded pe-2" href="store.html">Store</a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link" href="visit.html">Visit</a>
