added small harp store page

--- a/nutritional.html
+++ b/nutritional.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="/images/harp-small.png" />
-    <title>Nutrional Page</title>
+    <title>Nutritional Page</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-sm text-dark head-color fw-bold">
