added gradient bg store

--- a/store.html
+++ b/store.html
@@ -40,7 +40,7 @@
         </nav>
     
         <section class="storeHead">
-            <div class="menu-1 bg-light p-5 text-center">
+            <div class="menu-1 p-5 text-center">
             <div class="container">
                 <div class="gird">
                     <div class="row">
@@ -56,8 +56,8 @@
 
         <section class="shopGrid">
             <div class="container">
-                <div class="grid col-md-12 bg-dark text-center py-2 px-5 align-items-center">
-                    <h2 class="text-center mb-4">Shop our Famous Brand Today!</h2>
+                <div class="grid col-md-12 text-center py-2 px-5 align-items-center">
+                    <h2 class="text-center text-light mb-4">Shop our Famous Brand Today!</h2>
                     <div class="row text-center d-flex justify-content-center">
                         <div class="item text-center bg-light rounded shadow mb-3 col-md-3 mx-4">
                             <img class="img-fluid p-4 storeImage" src="images/2xglass.jpg" alt="two glass set">
