font styling nutrional page

--- a/nutritional.html
+++ b/nutritional.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Oswald:wght@300&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="/images/harp-small.png" />
     <title>Nutritional Page</title>
@@ -29,16 +33,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto text-end">
           <li class="nav-item ">
-            <a class="nav-link " href="store.html">Store</a>
+            <a class="nav-link dance" href="store.html">Store</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="visit.html">Visit</a>
+            <a class="nav-link dance" href="visit.html">Visit</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link bg-white rounded" href="nutritional.html">Nutrition</a>
+            <a class="nav-link bg-white rounded dance" href="nutritional.html">Nutrition</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="history.html">History</a>
+            <a class="nav-link dance" href="history.html">History</a>
           </li>
         </ul>
       </div>
@@ -62,51 +66,52 @@
 
     <section>
       <div class="container p-5  ">
+        <h1 class="text-light dance">Nutritional Values</h1>
         <table class="table table-striped  table-dark">
             <thead>
               <tr >
-                <th scope="col">#</th>
-                <th scope="col" >Ingredients(do you care?)</th>
-                <th scope="col">Per half pint (why?)</th>
-                <th scope="col">Full Pint (There you go!)</th>
-                <th scope="col">SPLIT</th>
+                <th scope="col"><img src="images/harp-small.png" alt=""></th>
+                <th  class="dance tableFont"   scope="col" >Ingredients(do you care?)</th>
+                <th class="dance tableFont" scope="col">Per half pint (why?)</th>
+                <th class="dance tableFont" scope="col">Full Pint (There you go!)</th>
+                <th class="dance tableFont" scope="col">SPLIT</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td>Protein</td>
-                <td>not enough</td>
-                <td>have another pint to be sure</td>
-                <td>THE</td>
+                <td class="dance tableFont">Protein</td>
+                <td class="dance tableFont">not enough</td>
+                <td class="dance tableFont">have another pint to be sure</td>
+                <td class="dance tableFont">THE</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
-                <td >Carbs</td>
-                <td>half of a pint</td>
-                <td>just drink it, basically zero</td>
-                <td>G</td>
+                <td class="dance tableFont" >Carbs</td>
+                <td class="dance tableFont">half of a pint</td>
+                <td class="dance tableFont">just drink it, basically zero</td>
+                <td class="dance tableFont">G</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>of which are sugar</td>
-                <td>less than a choclate bar</td>
-                <td>are you really counting at this point?</td>
-                <td>ON</td>
+                <td class="dance tableFont">of which are sugar</td>
+                <td class="dance tableFont">less than a choclate bar</td>
+                <td class="dance tableFont">are you really counting at this point?</td>
+                <td class="dance tableFont">ON</td>
               </tr>
               <tr>
                 <th scope="row">4</th>
-                <td>Fat</td>
-                <td>You need to bulk up</td>
-                <td>Good for fitness</td>
-                <td>EVERY</td>
+                <td class="dance tableFont">Fat</td>
+                <td class="dance tableFont">You need to bulk up</td>
+                <td class="dance tableFont">Good for fitness</td>
+                <td class="dance tableFont">EVERY</td>
               </tr>
               <tr>
                 <th scope="row">5</th>
-                <td>Beef</td>
-                <td><a href="https://www.beefeater.co.uk/en-gb" class="beefeaterTag">not enough beef<i class="fa-solid fa-cow"></i></a></td>
-                <td><a href="https://www.beefeater.co.uk/en-gb" class="beefeaterTag">get a beef eater with it<i class="fa-solid fa-cow"></i></a></td>
-                <td>PINT</td>
+                <td class="dance tableFont">Beef</td>
+                <td class="dance tableFont"><a href="https://www.beefeater.co.uk/en-gb" class="beefeaterTag">not enough beef<i class="fa-solid fa-cow"></i></a></td>
+                <td class="dance tableFont"><a href="https://www.beefeater.co.uk/en-gb" class="beefeaterTag">get a beef eater with it<i class="fa-solid fa-cow"></i></a></td>
+                <td class="dance tableFont">PINT</td>
               </tr>
             </tbody>
           </table>
