changed nav to fixed top

--- a/history.html
+++ b/history.html
@@ -17,7 +17,7 @@
     <title>History</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm text-dark head-color fw-bold">
+    <nav class="navbar fixed-top navbar-expand-sm text-dark head-color fw-bold">
         <div class="container-xxl">
           <a class="navbar-brand" href="/index.html">
               <img src="images/harp.png"  class="img-fluid px-2 scale" alt="logo" width="50px">
