carl images sorted

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img
-          src="/new_images/gun-car-3.png"
+          src="/new_images/gun1-redo.png"
           class="d-block w-100 img-fluid"
           alt="..."
         />
@@ -86,7 +86,7 @@
       </div>
       <div class="carousel-item">
         <img
-          src="/new_images/gun-car-3.png"
+          src="/new_images/gun3redo.png"
           class="d-block w-100 img-fluid"
           alt="..."
 
