--- a/store.html
+++ b/store.html
@@ -15,6 +15,7 @@
         <div class="container-xxl">
           <a class="navbar-brand" href="/index.html">
               <img src="images/harp.png"  class="img-fluid px-2 scale" alt="logo" width="50px">
+              <span>Guinness</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,7 +41,7 @@
         </nav>
     
         <section class="storeHead">
-            <div class="menu-1 bg-light p-5 text-center">
+            <div class="menu-1 p-5 text-center">
             <div class="container">
                 <div class="gird">
                     <div class="row">
