fixed mobile issue

--- a/visit.html
+++ b/visit.html
@@ -60,10 +60,10 @@
         <div class="container py-4 text-light">
             <div class="grid">
                 <div class="row align-items-center">
-                    <div class="col-6 d-flex justify-content-center">
+                    <div class="col-md-6 d-flex justify-content-center">
                         <img src="images/storehouse-large.jpg" class="img-fluid rounded" alt="" width="70%">
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <h2 class="text-end px-4 py-2">MEGA super fun times</h2>
                         <p class="px-4 text-end">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi impedit eaque minima vitae debitis. Saepe maiores esse quae porro quia. Nesciunt quaerat nam dolores neque blanditiis quia vel velit itaque rem aperiam, reiciendis minima praesentium dolorem quisquam. Cum ex in provident voluptatibus necessitatibus. Odit rem non excepturi veniam maiores ea.</p>
                     </div>
@@ -76,7 +76,7 @@
         <div class="container py-4 bg-black text-light">
             <div class="grid">
                 <div class="row align-items-center">
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <h2 class="text-start px-4 py-2">Sample our wares!</h2>
                         <p class="px-4 text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi impedit eaque minima vitae debitis. Saepe maiores esse quae porro quia. Nesciunt quaerat nam dolores neque blanditiis quia vel velit itaque rem aperiam, reiciendis minima praesentium dolorem quisquam. Cum ex in provident voluptatibus necessitatibus. Odit rem non excepturi veniam maiores ea.</p>
                     </div>
