--- a/visit.html
+++ b/visit.html
@@ -44,10 +44,10 @@
       <div class="container">
         <div class="grid">
             <div class="row">
-                <div class="col-12-md heroImg d-flex p-5 flex-column">
+                <div class="heroImg d-flex p-5 flex-column">
                         <h1 class="text-light p-5 ms-auto dance">Visit us today!</h1>
-                        <div class="col-6 ms-auto py-5 d-flex flex-column align-items-end">
-                            <p class="text-light py-5 mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsum consequatur maxime non voluptatum sequi, nesciunt animi maiores voluptate? Unde saepe officiis magni accusantium ratione libero eligendi? Ut, nam asperiores cupiditate, illum quas nostrum iusto quia dignissimos, distinctio itaque sapiente.</p>
+                        <div class="col-md-6 ms-auto py-5 d-flex flex-column align-items-end">
+                            <p class="text-light pt-5 mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsum consequatur maxime non voluptatum sequi, nesciunt animi maiores voluptate? Unde saepe officiis magni accusantium ratione libero eligendi? Ut, nam asperiores cupiditate, illum quas nostrum iusto quia dignissimos, distinctio itaque sapiente.</p>
                             <a href="#bookings" class=" bookNowButton btn btn-success scale button text-light rounded p-4 col-3">Book Now</a>
                         </div>
                         
