--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="grid">
                         <div class="row align-items-center">
                             <div class="col-md-6 align-items-center">
-                                <img src="/images/2814503439_846e1d1697_o_wide-22d2c9d528eb7df9d655fdf1f498bf1779a696d4.jpg" alt="" class="img-fluid rounded" width="500px" height="500px">
+                                <img src="/new_images/Gun_Car_1.png" alt="" class="img-fluid rounded" width="500px" height="500px">
                             </div>
                             <div class="col-md-6 dance text-white fw-bold">
                                 <p class="h2">Smooth Taste</p>
