added beefy christmas link

--- a/history.html
+++ b/history.html
@@ -99,7 +99,7 @@
                         <ul class="footer-list p-3">
                             <li  class=" splitG p-2 mb-1"><a href="https://www.ladbible.com/news/guinness-challenge-pub-right-way-20221025">Split the G, but which way?</a></li>
                             <li class="splitG p-2 mb-1"><a href="https://www.drinkaware.co.uk/?gclid=EAIaIQobChMI1I-gnt3IggMV0otoCR3AiwX_EAAYASAAEgKdvfD_BwE" class="footer-link mb-1 p-2">Drink Aware</a></li>
-                            <li  class="beefLink p-2 mb-1"> <a href="">This christmas, Santa goes to the beefeater</a></li>
+                            <li  class="beefLink p-2 mb-1"> <a href="https://www.beefeater.co.uk/en-gb/christmas">This christmas, Santa goes to the beefeater</a></li>
                         </ul>
                     </div>
                     <div class=" footerLinks col-md-3 justify-self-end p-3 d-flex flex-column ms-auto align-items-center">
